--- a/package.json
+++ b/package.json
@@ -1,14 +1,30 @@
 {
-  "name": "bot_ppob",
+  "name": "telegram-bot-ppob",
   "version": "1.0.0",
+  "description": "Telegram bot PPOB + inline keyboard dynamic + reply keyboard",
   "main": "bot.js",
   "type": "module",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node bot.js",
+    "dev": "nodemon bot.js"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
+    "axios": "^1.6.7",
     "node-telegram-bot-api": "^0.61.0",
-    "axios": "^1.6.7"
+    "dotenv": "^16.4.1",
+    "dayjs": "^1.11.10",
+    "form-data": "^4.0.0",
+    "node-fetch": "^3.3.2",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "qrcode-terminal": "^0.12.0",
+    "chalk": "^5.3.0",
+    "fs-extra": "^11.2.0",
+    "shortid": "^2.2.16",
+    "mime-types": "^2.1.35",
+    "sharp": "^0.33.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
